# finn_os

./: Cargo.toml  build.rs
.cargo/: config.toml
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: executor.rs  interrupts.rs  lib.rs  main.rs  memory.rs
kernel/src/allocator/: linked_list.rs  mod.rs
kernel/src/graphics/: configuration.rs  vga.rs
kernel/src/graphics/lines/: mod.rs
kernel/src/graphics/registers/: general.rs
kernel/src/io/: keyboard.rs  mod.rs
kernel/src/render/: mod.rs  renderer.rs
kernel/src/render/objects/: axis.rs
kernel/tests/: heap_allocation.rs  should_panic.rs  stack_overflow.rs  task_execution.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  timer.rs  vga_buffer.rs
src/IO/: keyboard.rs  mod.rs  mouse.rs  serial.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
src/graphics/: colors.rs  configuration.rs  mod.rs  vga.rs
src/graphics/registers/: mod.rs
src/render/: geometry.rs  mod.rs  objects.rs  renderer.rs  statics.rs
src/render/objects/: mod.rs  ship.rs  teapot.rs
src/task/: executor.rs  keyboard.rs  keyboard_util.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs  task_execution.rs
