[package]
name = "finn_os"
version = "0.1.0"
edition = "2021"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
linked_list_allocator = "0.9.0"
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }
spinning_top = { version = "0.2.4", features = ["nightly"] }
bitflags = "1.2.1"
libm = "0.2.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies.num-traits]
version = "0.2.14"
default-features = false


[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300          # (in seconds)